# hpc-workspace-v2

./: .clang-format  .clangd  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.adoc  README.md  admin-guide.adoc  admin-guide.md  config-full-sample.conf  config-minimal-sample.conf  user-guide.adoc  user-guide.md  vcpkg.json  whats-new.md
.github/ISSUE_TEMPLATE/: blank-issue.md  bug-report.md  bug_report.md  documentation.md  feature-request.md  proposal.md
.github/codeql/: codeql-config.yml
.github/workflows/: bats.yml  codeql.yml
bats/: bad_ws.conf  no_mailfrom_ws.conf  no_ws_ws.conf  permissions_ws.conf  ws-with-userlimit.conf  ws.conf
bats/test/: ws_allocate.bats  ws_editdb.bats  ws_expirer.bats  ws_find.bats  ws_list.bats  ws_prepare.bats  ws_register.bats  ws_release.bats  ws_restore.bats  ws_send_ical.bats  ws_share.bats  ws_stat.bats  ws_validate_config.bats
bats/test/test_helper/: common-setup.bash
bats/test_cap/: ws_allocate.bats  ws_expirer.bats  ws_restore.bats
bats/test_cap/test_helper/: common-setup.bash
bats/test_setuid/: ws_allocate.bats  ws_expirer.bats  ws_release.bats  ws_restore.bats
bats/test_setuid/test_helper/: common-setup.bash
bats/ws.d/: 00-ws.conf  01-ws1.conf  01-ws2.conf  02-ws2.conf
cmake/: vcpkg-bootstrap.sh
docker/rockylinux-9.5/: Dockerfile  README.md  entrypoint.sh
docker/rockylinux-9.5-static/: Dockerfile
docker/ubuntu-24.04/: .lcovrc  Dockerfile  README.md  entrypoint.sh
documentation/: admin-guide.md  whats-new.adoc  whats-new.md
man/man1/: ws_allocate.1  ws_extend.1  ws_find.1  ws_list.1  ws_register.1  ws_release.1  ws_restore.1  ws_send_ical.1  ws_share.1  ws_share_gemini.1  ws_stat.1
man/man7/: ws.7
man/man8/: ws_editdb.1  ws_editdb.8  ws_expirer.8  ws_prepare.8  ws_validate_config.8
onsite-test/: cmp-all.sh  cmp-expirer-logs.py
src/: CMakeLists.txt  PathWorkStealingQueue.hpp  UserConfig.cpp  UserConfig.h  build_info.h  capability.cpp  capability.h  caps.cpp  caps.h  config.cpp  config.h  db.h  dbv1.cpp  dbv1.h  mail.cpp  mail.h  setcap_install.cmake  setuid_install.cmake  user.cpp  user.h  utils.cpp  utils.h  ws.h  ws_allocate.cpp  ws_editdb.cpp  ws_expirer.cpp  ws_find.cpp  ws_list.cpp  ws_prepare.cpp  ws_register.cpp  ws_release.cpp  ws_restore.cpp  ws_send_ical.cpp  ws_stat.cpp  ws_validate_config.cpp
tests/: CMakeLists.txt  UserConfig_test.cpp  caps_test.cpp  config_test.cpp  db_test.cpp  dbv1_test.cpp  utils_test.cpp
tools/: pack-source.sh
tools/bash-completion/: ws_tools.sh
vm/alma-10/: Vagrantfile
vm/rocky-8/: Vagrantfile
vm/rocky-9/: Vagrantfile
